# OptimDRL_nhat

./: COMPREHENSIVE_REPORT.fdb_latexmk  COMPREHENSIVE_REPORT.fls  COMPREHENSIVE_REPORT.md  COMPREHENSIVE_REPORT.tex  CONCEPTS_learning_process_tracking.md  EXPERIMENTS_v1.md  EXPERIMENTS_v2.md  EXPERIMENTS_v3_plan.md  EXPERIMENTS_v4.md  NOTES_paper_reproduction.md  PIPELINES.md  README.md  RESEARCH_NOTES.md  RESULTS_AND_ANALYSIS.tex  RESULTS_comparison.md  SUMMARY_handover_DRL_experiments.docx  TAI_LIEU_ON_TAP.md  pyproject.toml  run.py  xelatex_run1.txt  xelatex_run2.txt  xelatex_run3.txt
scripts/: __init__.py  eval_checkpoints.py  eval_v4.py  evaluate_all.py  generate_report.py  train_ppo_2phase.py  train_ppo_bc_2m.py  train_ppo_bc_curriculum.py  train_ppo_bc_highent.py  train_ppo_bc_noterm.py  train_ppo_bc_paper.py  train_ppo_curriculum.py  train_ppo_imitation.py  train_ppo_multiseed.py  train_ppo_reward_shaped.py
