[project]
name = "ho-optim-drl"
version = "1.0.0"
description = "Framework for learning handover algorithms using deep reinforcement learning."
requires-python = ">=3.12"
dependencies = [
    "gpxpy==1.6.2",
    "gymnasium==1.1.1",
    "numpy==2.1.3",
    "rl-zoo3==2.6.0",
    "scipy==1.14.1",
    "setuptools==75.3.0",
    "stable-baselines3==2.6.0",
    "torch==2.7.0",
    "wandb==0.19.11",
    "tensorboard>=2.14.0",
    "matplotlib>=3.7.0",
    "python-docx>=1.2.0",
]

[project.scripts]
validate_3gpp = "scripts.validate_3gpp:main"
validate_ppo = "scripts.validate_ppo:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126" },
]
